cloud-infra-macros/tests/fails/log_group_name_invalid_chars.rs
use cloud_infra_macros::log_group_name;

fn example() {
    let name = log_group_name!("invalid@chars");
}

fn main() {}